[gd_scene load_steps=5 format=3 uid="uid://dxb30teb6x8kp"]

[ext_resource type="Script" uid="uid://cleijjnl1h8n4" path="res://Levels/UI/settings.gd" id="1_7iqql"]
[ext_resource type="Texture2D" uid="uid://bv58m5ar8agh6" path="res://assets/ilovethisbg.png" id="2_vbc7n"]
[ext_resource type="Script" uid="uid://dtlrtrftvhm8e" path="res://Levels/UI/exit_confirm.gd" id="3_bpd7w"]

[sub_resource type="Theme" id="Theme_jwo76"]

[node name="settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7iqql")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_vbc7n")

[node name="MainSettingsPanel" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(2800, 1800)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1300.0
offset_top = -900.0
offset_right = 1300.0
offset_bottom = 900.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel"]
layout_mode = 2
theme_override_constants/margin_left = 220
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 220
theme_override_constants/margin_bottom = 80

[node name="VBox" type="VBoxContainer" parent="MainSettingsPanel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 100

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "SETTINGS"

[node name="ResPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_jwo76")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/ResPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/ResPanel/MarginContainer"]
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="MainSettingsPanel/MarginContainer/VBox/ResPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="FullscreenPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_jwo76")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel/MarginContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="FullscreenCheck" type="CheckButton" parent="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="BorderPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_jwo76")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/BorderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/BorderPanel/MarginContainer"]
layout_mode = 2
text = "Borderless"

[node name="BorderCheck" type="CheckButton" parent="MainSettingsPanel/MarginContainer/VBox/BorderPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="VolPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_jwo76")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/VolPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/VolPanel/MarginContainer"]
layout_mode = 2
text = "Volume"

[node name="SoundSlide" type="HSlider" parent="MainSettingsPanel/MarginContainer/VBox/VolPanel/MarginContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
tick_count = 20

[node name="DarkPanel" type="Panel" parent="MainSettingsPanel/MarginContainer/VBox"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme = SubResource("Theme_jwo76")

[node name="MarginContainer" type="MarginContainer" parent="MainSettingsPanel/MarginContainer/VBox/DarkPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="Label" type="Label" parent="MainSettingsPanel/MarginContainer/VBox/DarkPanel/MarginContainer"]
layout_mode = 2
text = "Dark Mode"

[node name="DarkCheck" type="CheckButton" parent="MainSettingsPanel/MarginContainer/VBox/DarkPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Apply" type="Button" parent="MainSettingsPanel/MarginContainer/VBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
text = " Apply "

[node name="exit_confirm" type="GridContainer" parent="."]
custom_minimum_size = Vector2(1600, 600)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_bpd7w")

[node name="ColorRect" type="PanelContainer" parent="exit_confirm"]
custom_minimum_size = Vector2(2000, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="exit_confirm/ColorRect"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="exit_confirm/ColorRect/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "YOU HAVE UNSAVED CHANGES"
justification_flags = 131
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 80

[node name="MarginContainer" type="MarginContainer" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="yes" type="Button" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Save"

[node name="MarginContainer2" type="MarginContainer" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="no" type="Button" parent="exit_confirm/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Discard"

[connection signal="item_selected" from="MainSettingsPanel/MarginContainer/VBox/ResPanel/MarginContainer/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
[connection signal="pressed" from="MainSettingsPanel/MarginContainer/VBox/FullscreenPanel/MarginContainer/FullscreenCheck" to="." method="_on_fullscreen_check_pressed"]
[connection signal="pressed" from="MainSettingsPanel/MarginContainer/VBox/BorderPanel/MarginContainer/BorderCheck" to="." method="_on_border_check_pressed"]
[connection signal="pressed" from="MainSettingsPanel/MarginContainer/VBox/DarkPanel/MarginContainer/DarkCheck" to="." method="_on_dark_check_pressed"]
[connection signal="pressed" from="MainSettingsPanel/MarginContainer/VBox/Apply" to="." method="_on_apply_pressed"]
[connection signal="pressed" from="exit_confirm/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="exit_confirm/ColorRect/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer2/no" to="." method="_on_no_pressed"]
